--- a/src/economy/treasury_db_config.json
+++ b/src/economy/treasury_db_config.json
@@ -1,48 +1,26 @@
 {
     "tables": {
-        "agendaunit": {
-            "columns": {
-                "agent_id": {},
-                "rational": {}
-            }
-        },
-        "belief_catalog": {
-            "columns": {
-                "agent_id": {},
-                "base": {},
-                "pick": {}
-            }
-        },
-        "calendar": {
-            "columns": {
-                "agent_id": {},
-                "intent_idea_road": {},
-                "intent_weight": {},
-                "report_date_range_cease": {},
-                "report_date_range_start": {},
-                "report_interval_intent_state_max_count": {},
-                "report_interval_intent_task_max_count": {},
-                "report_interval_length": {},
-                "report_time_road": {},
-                "task": {},
-                "time_begin": {},
-                "time_close": {}
-            }
-        },
-        "groupunit_catalog": {
+        "agenda_groupunit": {
             "columns": {
                 "agent_id": {},
                 "groupunit_group_id": {},
                 "treasury_partylinks": {}
             }
         },
-        "idea_catalog": {
+        "agenda_idea_beliefunit": {
+            "columns": {
+                "agent_id": {},
+                "base": {},
+                "pick": {}
+            }
+        },
+        "agenda_ideaunit": {
             "columns": {
                 "agent_id": {},
                 "idea_road": {}
             }
         },
-        "partyunit": {
+        "agenda_partyunit": {
             "columns": {
                 "_agenda_credit": {},
                 "_agenda_debt": {},
@@ -59,6 +37,28 @@
                 "_treasury_voice_rank": {},
                 "agent_id": {},
                 "party_id": {}
+            }
+        },
+        "agendaunit": {
+            "columns": {
+                "agent_id": {},
+                "rational": {}
+            }
+        },
+        "calendar": {
+            "columns": {
+                "agent_id": {},
+                "intent_idea_road": {},
+                "intent_weight": {},
+                "report_date_range_cease": {},
+                "report_date_range_start": {},
+                "report_interval_intent_state_max_count": {},
+                "report_interval_intent_task_max_count": {},
+                "report_interval_length": {},
+                "report_time_road": {},
+                "task": {},
+                "time_begin": {},
+                "time_close": {}
             }
         },
         "river_block": {
