--- a/src/market/bank_db_config.json
+++ b/src/market/bank_db_config.json
@@ -4,7 +4,7 @@
             "columns": {
                 "agent_id": {},
                 "groupunit_group_id": {},
-                "treasury_partylinks": {}
+                "bank_partylinks": {}
             }
         },
         "agenda_idea_beliefunit": {
@@ -30,11 +30,11 @@
                 "_agenda_intent_ratio_debt": {},
                 "_creditor_live": {},
                 "_debtor_live": {},
-                "_treasury_credit_score": {},
-                "_treasury_tax_diff": {},
-                "_treasury_tax_paid": {},
-                "_treasury_voice_hx_lowest_rank": {},
-                "_treasury_voice_rank": {},
+                "_bank_credit_score": {},
+                "_bank_tax_diff": {},
+                "_bank_tax_paid": {},
+                "_bank_voice_hx_lowest_rank": {},
+                "_bank_voice_rank": {},
                 "agent_id": {},
                 "party_id": {}
             }
@@ -64,9 +64,9 @@
         "river_block": {
             "columns": {
                 "block_num": {},
-                "currency_close": {},
-                "currency_master": {},
-                "currency_start": {},
+                "cash_close": {},
+                "cash_master": {},
+                "cash_start": {},
                 "dst_agent_id": {},
                 "parent_block_num": {},
                 "river_tree_level": {},
@@ -78,13 +78,13 @@
                 "circle_num": {},
                 "curr_close": {},
                 "curr_start": {},
-                "currency_master": {},
+                "cash_master": {},
                 "dst_agent_id": {}
             }
         },
         "river_reach": {
             "columns": {
-                "currency_master": {},
+                "cash_master": {},
                 "reach_curr_close": {},
                 "reach_curr_start": {},
                 "set_num": {},
