#49 #71 #91 change bank tax to bank due

--- a/src/market/bank_db_config.json
+++ b/src/market/bank_db_config.json
@@ -31,8 +31,8 @@
                 "_creditor_live": {},
                 "_debtor_live": {},
                 "_bank_credit_score": {},
-                "_bank_tax_diff": {},
-                "_bank_tax_paid": {},
+                "_bank_due_diff": {},
+                "_bank_due_paid": {},
                 "_bank_voice_hx_lowest_rank": {},
                 "_bank_voice_rank": {},
                 "agent_id": {},
