#92 market_bool, problem_bool, start _market_justified, make_l1_road cleanup

--- a/src/agenda/learn_grain_config.json
+++ b/src/agenda/learn_grain_config.json
@@ -281,7 +281,9 @@
                 "_range_source_road": "RoadUnit",
                 "_reest": "bool",
                 "_weight": "int",
-                "promise": "bool"
+                "promise": "bool",
+                "_market_bool": "bool",
+                "_problem_bool": "bool"
             },
             "required_args": {
                 "label": "RoadUnit",
