--- a/src/agenda/atom_config.json
+++ b/src/agenda/atom_config.json
@@ -1,6 +1,6 @@
 {
     "agenda_group_partylink": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 25,
             "description_elements": []
@@ -29,13 +29,14 @@
                 "sqlite_datatype": "TEXT"
             }
         },
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 12,
             "description_elements": []
         }
     },
     "agenda_groupunit": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 27,
             "description_elements": []
@@ -56,13 +57,14 @@
                 "sqlite_datatype": "TEXT"
             }
         },
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 11,
             "description_elements": []
         }
     },
     "agenda_idea_balancelink": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 23,
             "description_elements": []
@@ -91,13 +93,14 @@
                 "sqlite_datatype": "TEXT"
             }
         },
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 14,
             "description_elements": []
         }
     },
     "agenda_idea_beliefunit": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 20,
             "description_elements": []
@@ -130,13 +133,14 @@
                 "sqlite_datatype": "TEXT"
             }
         },
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 15,
             "description_elements": []
         }
     },
     "agenda_idea_healerhold": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 22,
             "description_elements": []
@@ -155,10 +159,11 @@
                 "python_type": "RoadUnit",
                 "sqlite_datatype": "TEXT"
             }
-        }
+        },
+        "treasury_only": false
     },
     "agenda_idea_reason_premiseunit": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 18,
             "description_elements": []
@@ -195,13 +200,14 @@
                 "sqlite_datatype": "TEXT"
             }
         },
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 16,
             "description_elements": []
         }
     },
     "agenda_idea_reasonunit": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 19,
             "description_elements": []
@@ -226,13 +232,14 @@
                 "sqlite_datatype": "TEXT"
             }
         },
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 17,
             "description_elements": []
         }
     },
     "agenda_idea_suffgroup": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 21,
             "description_elements": []
@@ -251,10 +258,11 @@
                 "python_type": "RoadUnit",
                 "sqlite_datatype": "TEXT"
             }
-        }
+        },
+        "treasury_only": false
     },
     "agenda_ideaunit": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 24,
             "description_elements": []
@@ -323,13 +331,14 @@
                 "sqlite_datatype": "TEXT"
             }
         },
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 13,
             "description_elements": []
         }
     },
     "agenda_partyunit": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "DELETE": {
             "atom_order": 26,
             "description_elements": []
@@ -358,13 +367,14 @@
                 "sqlite_datatype": "TEXT"
             }
         },
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 10,
             "description_elements": []
         }
     },
     "agendaunit": {
-        "treasury_only": false,
+        "calculated_attrs": {},
         "optional_args": {
             "_auto_output_job_to_forum": {
                 "python_type": "bool",
@@ -392,6 +402,7 @@
             }
         },
         "required_args": {},
+        "treasury_only": false,
         "UPDATE": {
             "atom_order": 28,
             "description_elements": [
@@ -422,5 +433,119 @@
                 }
             ]
         }
+    },
+    "calendar": {
+        "calculated_attrs": {},
+        "required_args": {
+            "intent_idea_road": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "intent_weight": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "report_date_range_cease": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "report_date_range_start": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "report_interval_intent_state_max_count": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "report_interval_intent_task_max_count": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "report_interval_length": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "report_time_road": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "task": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "time_begin": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "time_close": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "worker_id": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            }
+        },
+        "treasury_only": true
+    },
+    "river_block": {
+        "calculated_attrs": {},
+        "required_args": {
+            "block_num": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "cash_close": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "cash_master": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "cash_start": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "dst_worker_id": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "parent_block_num": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "river_tree_level": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            },
+            "src_worker_id": {
+                "python_type": "int",
+                "sqlite_datatype": "INTEGER"
+            }
+        },
+        "treasury_only": true
+    },
+    "river_circle": {
+        "calculated_attrs": {},
+        "required_args": {
+            "cash_master": {},
+            "circle_num": {},
+            "curr_close": {},
+            "curr_start": {},
+            "dst_worker_id": {}
+        },
+        "treasury_only": true
+    },
+    "river_reach": {
+        "calculated_attrs": {},
+        "required_args": {
+            "cash_master": {},
+            "reach_curr_close": {},
+            "reach_curr_start": {},
+            "set_num": {},
+            "src_worker_id": {}
+        },
+        "treasury_only": true
     }
 }
