--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -11,11 +11,12 @@ jobs:
           python-version: '3.12'
           architecture: 'x64'
       - name: Install Dependencies
-        run: python -m pip install --upgrade pip
-        run: python -m pip install pytest
-        #run: python -m pip install plotly
-        run: python -m pip install pytest-cov
-        run: python -m pip install pyqt5
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pytest
+          python -m pip install plotly
+          python -m pip install pytest-cov
+          python -m pip install pyqt5
       - name: Execute tests and generate report
         run: python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --cov=com --cov-report=xml --cov-report=html
 
