--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pytest
+          python -m pip install pandas
           python -m pip install plotly
           python -m pip install pytest-cov
           python -m pip install pyqt5
