--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -19,8 +19,11 @@ jobs:
           python -m pip install pytest-cov
           python -m pip install pyqt5
       - name: Execute tests and generate report
-        run: python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --cov=com --cov-report=xml --cov-report=html
-
+        #The current issue apears to be caused by a permissions issue, so this is a lazy fix to see if the workflow won't error out.
+        run: |
+          chmod -R 777 ./* 
+          python -m pytest --junitxml="junit/test-results_`date '+%Y-%m-%d_%T'`.xml" --cov=com --cov-report=xml --cov-report=html
+          
       #TODO: 
         #create dir for test results
         #merge decison based on pass/fail
